WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206454
REGRESSION(
r253636
): [GTK] Mouse cursor changes using onMouseXYZ are erratic
https://bugs.webkit.org/show_bug.cgi?id=206454
Summary
REGRESSION(r253636): [GTK] Mouse cursor changes using onMouseXYZ are erratic
Lauro Moura
Reported
2020-01-17 15:41:02 PST
After
r253636
(after bisecting) the two tests below started failing. * fast/events/mouse-cursor-change.html: ``` @@ -10,13 +10,13 @@ Cursor Info: type=Hand hotSpot=0,0 Mouse down +Cursor Info: type=Hand hotSpot=0,0 + +Mouse hold down, move Cursor Info: type=Progress hotSpot=0,0 -Mouse hold down, move -Cursor Info: type=Hand hotSpot=0,0 - Mouse up -Cursor Info: type=Help hotSpot=0,0 +Cursor Info: type=Progress hotSpot=0,0 PASS successfullyParsed is true ``` * fast/events/mouse-cursor-no-mousemove.html: ``` @@ -8,7 +8,7 @@ TEST CASE: Mouse idle, change cursor should not fire mousemove event Cursor Info: type=Pointer hotSpot=0,0 -Cursor Info: type=Help hotSpot=0,0 +Cursor Info: type=Pointer hotSpot=0,0 PASS successfullyParsed is true ``` Testing the first one in MiniBrowserGtk, it seems like the cursor keeps stuck to the style assigned in `onMouseMove`, with the other styles appearing briefly in a erratic manner. Manual testing worked fine in Firefox and Epiphany 3.34 (WebKitGTK 2.26.2).
Attachments
Patch
(2.59 KB, patch)
2020-01-30 01:00 PST
,
Carlos Garcia Campos
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-01-30 01:00:51 PST
Created
attachment 389233
[details]
Patch
Tim Horton
Comment 2
2020-01-30 01:15:50 PST
Comment on
attachment 389233
[details]
Patch Apologies!
Carlos Garcia Campos
Comment 3
2020-01-30 05:27:53 PST
Committed
r255421
: <
https://trac.webkit.org/changeset/255421
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug