REGRESSION(r253636): [GTK] Mouse cursor changes using onMouseXYZ are erratic https://bugs.webkit.org/show_bug.cgi?id=206454

Reviewed by Tim Horton.

Source/WebKit:

Since r253636 only platforms defining HAVE_NSCURSOR claim to support setting the cursor.

* WebProcess/WebCoreSupport/WebChromeClient.h: Do not implement supportsSettingCursor() for GTK port either.

LayoutTests:

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/220007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255421 268f45cc-cd09-0410-ab3c-d52691b4dbfc